<resources>
    <string name="app_name">Project</string>
    <string name="tagline">Right Work, Right Focus, Right Productivity</string>
    <string name="title">Thrive</string>
    <string name="welcome">Welcome to Thrive</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="pause_button">Pause</string>
    <string name="start_button">Start</string>
    <string name="reset_button">Reset</string>
    <string name="pomodoro">The Pomodoro technique is a time-management method that uses a timer to break work into intervals,typically 25 minutes in length, separated by short breaks.The technique aims to improve focus and productivity by reducing the impact of internal and external distractions.</string>
    <string name="habit_tracker">Habit Tracker</string>
    <string name="habit_yes">Button for when habit successfully done</string>
    <string name="habit_no">Button for when habit not successfully done</string>
    <string name="new_habit">New Habit</string>
    <string name="habit_name">New Habit Name</string>
    <string name="habit_end_date">Habit Tracking End Date</string>
    <string name="habit_frequency">Tracking Frequency</string>
    <string-array name="freq">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="add_new_habit">Track New Habit</string>
    <string name="add_habit">Add New Habit</string>
    <string name="habit_title">Habit Title</string>
    <string name="habit_title_hint">Enter habit title</string>
    <string name="habit_target">Habit Target per Day(Hours)</string>
    <string name="habit_target_hint">Enter habit target</string>

    <string-array name="frequency_options">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="profile">Your Profile</string>
    <string name="edit_profile_name">Name:</string>
    <string name="edit_profile_email">Email:</string>
    <string name="edit_profile_password">Password:</string>
    <string name="edit_profile_name_hint">Enter your name</string>
    <string name="edit_profile_email_hint">Enter your email</string>
    <string name="edit_profile_password_hint">Enter your password</string>
    <string name="edit_profile_save_btn_text">Save Changes</string>
    <string name="edit_profile_image_desc">Profile Image</string>
</resources>