<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".NewHabit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingTop="30dp"
        android:background="@drawable/background_gradient"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            app:srcCompat="@drawable/logo_thrive" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="New Habit"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="180dp"
            android:layout_marginBottom="370dp"
            android:text="@string/habit_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@id/linearLayout2"
            app:layout_constraintStart_toStartOf="@id/linearLayout2"
            app:layout_constraintTop_toTopOf="@id/linearLayout2" />

        <EditText
            android:id="@+id/habit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="345dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@id/linearLayout2"
            app:layout_constraintStart_toStartOf="@id/linearLayout2"
            app:layout_constraintTop_toTopOf="@id/linearLayout2" />

        <TextView
            android:id="@+id/target_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="183dp"
            android:layout_marginBottom="230dp"

            android:gravity="center_horizontal"
            android:text="@string/habit_target"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@id/linearLayout2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/linearLayout2"
            app:layout_constraintTop_toTopOf="@id/linearLayout2"
            app:layout_constraintVertical_bias="0.279" />

        <EditText
            android:id="@+id/target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="186dp"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="250dp"

            android:ems="10"

            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@id/linearLayout2"
            app:layout_constraintStart_toStartOf="@id/linearLayout2"
            app:layout_constraintTop_toTopOf="@id/linearLayout2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="180dp"
            android:layout_marginBottom="230dp"

            android:gravity="center_horizontal"
            android:text="@string/habit_end_date"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@id/linearLayout2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/linearLayout2"
            app:layout_constraintTop_toTopOf="@id/linearLayout2"
            app:layout_constraintVertical_bias="0.279" />

        <EditText
            android:id="@+id/habit_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="186dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="250dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@id/linearLayout2"
            app:layout_constraintStart_toStartOf="@id/linearLayout2"
            app:layout_constraintTop_toTopOf="@id/linearLayout2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="180dp"

            android:gravity="center_horizontal"
            android:layout_marginBottom="190dp"
            android:text="@string/habit_frequency"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@id/linearLayout2"
            app:layout_constraintStart_toStartOf="@id/linearLayout2"
            app:layout_constraintTop_toTopOf="@id/linearLayout2" />

        <Spinner
            android:id="@+id/habit_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="203dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="140dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/linearLayout2"
            app:layout_constraintStart_toEndOf="@id/linearLayout2"
            app:layout_constraintStart_toStartOf="@id/linearLayout2"
            app:layout_constraintTop_toTopOf="@id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/add_new_habit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#009688"
        android:backgroundTintMode="add"
        android:text="@string/add_new_habit"
        android:textAlignment="center"
        android:textColor="#E8F8F7F7"
        android:textStyle="bold"
        android:layout_marginTop="-60dp"


        />

</LinearLayout>